jumping scrollbar fixed

--- a/src/components/MainHeader/MainHeader.module.scss
+++ b/src/components/MainHeader/MainHeader.module.scss
@@ -14,13 +14,20 @@
 		letter-spacing: $wideKerning;
 		font-weight: 100;
 		text-align: center;
+		color: $blackColor;
 	}
 
-	img {
+	.LogoContainer {
+		padding: 1rem;
+		z-index: 1;
 		opacity: 0.9;
-		width: 15%;
-		height: 15%;
 	}
+
+	// img {
+	// 	opacity: 0.9;
+	// 	width: 15%;
+	// 	height: 15%;
+	// }
 
 	&::before {
 		content: '';
@@ -39,10 +46,10 @@
 	.mainHeader {
 		min-height: 20vh;
 
-		img {
-			width: 40%;
-			height: 40%;
-		}
+		// img {
+		// 	width: 40%;
+		// 	height: 40%;
+		// }
 
 		h1 {
 			display: none;
